--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-# RCLONE_REMOTE_NAME="BitwardenBackup"
-# RCLONE_REMOTE_DIR="/BitwardenBackup/"
+# RCLONE_REMOTE_NAME="LldapBackup"
+# RCLONE_REMOTE_DIR="/LldapBackup/"
 # RCLONE_GLOBAL_FLAG=""
 # CRON="5 * * * *"
 # ZIP_ENABLE="TRUE"
-# ZIP_PASSWORD="WHEREISMYPASSWORD?"
+# ZIP_PASSWORD="MYPASSWORD?"
 # ZIP_TYPE="zip"
 # BACKUP_FILE_DATE_SUFFIX=""
 # BACKUP_KEEP_DAYS="0"
@@ -13,4 +13,9 @@
 # MAIL_TO=""
 # MAIL_WHEN_SUCCESS="TRUE"
 # MAIL_WHEN_FAILURE="TRUE"
+# SENDXMPP_ENABLE="FALSE"
+# SENDXMPP_USER=""
+# SENDXMPP_PASSWORD=""
+# SENDXMPP_SERVER=""
+# SENDXMPP_RECIPIENT=""
 # TIMEZONE="UTC"
