--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # RCLONE_REMOTE_NAME="LldapBackup"
 # RCLONE_REMOTE_DIR="/LldapBackup/"
 # RCLONE_GLOBAL_FLAG=""
-# CRON="5 * * * *"
+# CRON="13 1/1 * * *"
 # ZIP_ENABLE="TRUE"
 # ZIP_PASSWORD="MYPASSWORD?"
 # ZIP_TYPE="zip"
