--- a/.env
+++ b/.env
@@ -1,10 +1,7 @@
-# RCLONE_REMOTE_NAME="LldapBackup"
-# RCLONE_REMOTE_DIR="/LldapBackup/"
+# RCLONE_REMOTE_NAME="lldap_backup"
+# RCLONE_REMOTE_DIR="/lldap_back/"
 # RCLONE_GLOBAL_FLAG=""
-# CRON="13 1/1 * * *"
-# ZIP_ENABLE="TRUE"
-# ZIP_PASSWORD="MYPASSWORD?"
-# ZIP_TYPE="zip"
+# CRON="13 * * * *"
 # BACKUP_FILE_DATE_SUFFIX=""
 # BACKUP_KEEP_DAYS="1"
 # PING_URL=""
