--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-# RCLONE_REMOTE_NAME="lldap_backup"
-# RCLONE_REMOTE_DIR="/lldap_back/"
+BACKUP_DIR="/lldap_back/backup"
+RESTORE_DIR="/lldap_back/restore"
+RESTORE_EXTRACT_DIR="/lldap_back/extract"
+RCLONE_REMOTE_NAME="lldap_backup"
+RCLONE_REMOTE_DIR="/lldap_back/"
 # RCLONE_GLOBAL_FLAG=""
 # CRON="13 * * * *"
 # BACKUP_FILE_DATE_SUFFIX=""
